# bruxelles-oslo

./: .gitignore  README.md
data-samples/: bike_devices.json  bike_devices.v2.json  bike_devices_extended.json  bike_live.json  bike_summary.v2.json  bike_summary_20260215.json  dai_202602201350.xml  schema.json  tlc_20260313_1300.json
django/: .gitignore  README.md  manage.py
django/traffic/: apps.py  models.py
django/traffic/management/commands/: check_db.py  check_segmentmatch.py  export_oslo.py
django/traffic/oslo/: preprocess.py  traverses.rml.ttl
django/webtools/: settings.py
historical-data/: .gitignore  export_counts.py  measurements.rml.ttl
live-data/: .gitignore  README.md  export_live.py
live-data/mapping/: bike_devices.rml.ttl  bike_live.rml.ttl  live.rml.ttl
live-data/preprocess/: bike_devices.py  bike_live.py  dai.py  preprocess.py  tlc.py  util.py
oslo-mapping/: .gitignore  README.md  pyproject.toml  rml_map.py  traffic_counts_codelist_mapping.md
oslo-mapping/preprocessing/: preprocess_bike_devices.py  preprocess_bike_summary.py  preprocess_dai.py  preprocess_tlc.py
oslo-mapping/rml-mappings/: bike_devices.yml  bike_summary.yml  dai.yml  tlc.yml
segment-matcher/: .env.example  README.md  app.py  coords.py  models.py  openlr_adapter.py  pyproject.toml  scorer.py  wfs.py
segment-matcher/templates/: confirmed.html  disambiguate.html  no_pending.html  settings.html
